functional Issue changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -231,7 +231,7 @@ html, body {
   top: -31px;
   right: 0px;
   background-color: #F0F0F0;
-  z-index: 999;
+  z-index: 300;
 }
 
 .worksheetTitle {
@@ -778,9 +778,9 @@ input[type="range"]::-ms-track {
   border: 2px solid #80542a;
   left: 11%;
   top: 21%;
-  box-shadow: 0px 0px 115px 32px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 0px 0px 115px 32px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 115px 32px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 60px -1px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 0px 60px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 60px -1px rgba(0,0,0,0.75);
   display: none;
   background-image: url(../images/crops/shape283.svg);
   background-repeat: no-repeat;
@@ -789,6 +789,8 @@ input[type="range"]::-ms-track {
   -o-background-size: cover;
   background-size: cover;
   font-weight: bold;
+  z-index: 350;
+  cursor: move;
 }
 
 .squarerootbar {
